--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,30 +1,45 @@
 {
-  "name": "chrome extension demo",
-  "description": "Build an Extension!",
-  "version": "1.0.0",
   "manifest_version": 3,
-  "background": {
-    "service_worker": "background.ts"
-  },
-  "permissions": ["activeTab", "notification"],
-  "action": {
-    "default_popup": "popup/index.html",
-    "default_icon": {
-      "16": "assets/icons/icon-16.png",
-      "48": "assets/icons/icon-48.png",
-      "128": "assets/icons/icon-128.png"
-    }
-  },
-  "content_scripts": [ 
-    {
-      "all_frames": true, 
-      "matches": ["<all_urls>"],
-      "js": ["content-scripts/main.ts"]
-    }
+  "name": "axhub",
+  "homepage_url": "https://wiki.qianxin-inc.cn/pages/viewpage.action?pageId=538406419",
+  "description": "axhub扩展",
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
+  "host_permissions": [
+    "*://*/*"
   ],
   "icons": {
-    "16": "assets/icons/icon-16.png",
-    "48": "assets/icons/icon-48.png",
-    "128": "assets/icons/icon-128.png"
+    "16": "icons/16.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
+  },
+  "background": {
+    "service_worker": "js/background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "axhub",
+    "default_icon": {
+      "16": "icons/16.png",
+      "48": "icons/48.png",
+      "128": "icons/128.png"
+    }
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://*/start.html*"],
+      "js":["js/content-script.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [ "inject.js" ],
+      "matches": [ "<all_urls>" ]
+    }
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; "
   }
 }
