feat: upload 添加 origin参数

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,7 +29,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*/start.html*"],
+      "matches": ["<all_urls>"],
       "js":["js/content-script.js"]
     }
   ],
