--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service build --mode development --watch",
     "build": "vue-cli-service build",
+    "inspect": "vue-cli-service inspect",
     "lint": "vue-cli-service lint",
     "postinstall": "patch-package"
   },
@@ -12,6 +13,7 @@
     "@atsfe/qaxd": "^2.6.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "path-browserify": "^1.0.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
