--- a/src/manifest.json
+++ b/src/manifest.json
@@ -35,7 +35,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": [ "inject.js" ],
+      "resources": [ "js/inject.js" ],
       "matches": [ "<all_urls>" ]
     }
   ],
