--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@atsfe/qaxd": "^2.6.0",
+    "ant-design-vue": "1.7.8",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "path-browserify": "^1.0.1",
+    "qs": "^6.10.3",
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
